# graphics-and-programming-university-course

./: .gitignore  CMakeLists.txt  README.md
src/: BasicButton.hpp  Game.hpp  GameContext.hpp  Input.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  main.cpp
src/Engine/: BasicButton.hpp  DrawApi.hpp  Game.hpp  Input.hpp  Internal.hpp  Logger.hpp  Map.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  TextureHandle.hpp  TextureManager.hpp  Tile.hpp  TileHandle.hpp  TileManager.hpp  TileMap.hpp  TileTextureManager.hpp  UpdateApi.hpp
src/Engine/Apis/: Apis.hpp  Draw.hpp  Scene.hpp  Update.hpp  UpdateGui.hpp
src/Engine/Ecs/: Entity.hpp  EntityManager.hpp
src/Engine/Input/: Input.hpp  Mapping.hpp  Raw.hpp
src/Engine/Resources/Textures/: Handle.hpp  Manager.hpp  Textures.hpp
src/Engine/Scenes/: Manager.hpp  Scene.hpp  Scenes.hpp
src/Engine/World/: World.hpp
src/Engine/World/Ecs/: Ecs.hpp  Entity.hpp  Manager.hpp
src/Engine/World/Ecs/Components/: Transform.hpp
src/Engine/World/Tiles/: Handle.hpp  Manager.hpp  Map.hpp  TextureManager.hpp  Tile.hpp  Tiles.hpp
src/Game/: Components.hpp  Constants.hpp  Context.hpp  EntityPrefab.hpp  Game.hpp  Map.cpp  Map.hpp  SceneId.hpp  Tile.hpp  Types.hpp
src/Game/Scenes/: LevelEditor.cpp  LevelEditor.hpp  MainMenu.hpp  Pause.hpp  Platforming.cpp  Platforming.hpp  Scenes.hpp  TicTacToe.hpp
src/Game/Schema/: Context.hpp  SceneId.hpp  Types.hpp
src/pXL/: Camera.hpp  EntityPrefab.hpp  Manager.hpp  Math.hpp  Registry.hpp  SparseSet.hpp  pXL.hpp
src/pXL/App/: ApiDraw.hpp  ApiGame.hpp  ApiScene.hpp  ApiUpdate.hpp  ApiUpdateGui.hpp  App.hpp  Camera.hpp  Client.hpp  Engine.hpp  Input.hpp  InputMapping.hpp  InputRaw.hpp  Internal.hpp  Load.hpp  Scaling.hpp  Scene.hpp  SceneComms.hpp  SceneManager.hpp  SceneStack.hpp  TextMenu.hpp  Transition.hpp
src/pXL/Resources/: AssetManager.cpp  AssetManager.hpp  Assets.hpp  Background.hpp  Clip.hpp  DrawMap.hpp  EntitySprite.hpp  Frame.hpp  Load.cpp  Load.hpp  Resources.hpp  Sprite.hpp  SpriteDefinition.hpp  SpriteInstance.hpp  TextureHandle.hpp  TextureManager.hpp  TileSprite.hpp  TileTextureManager.hpp
src/pXL/World/: Entity.hpp  EntityManager.hpp  Grid.hpp  IdMap.hpp  Load.cpp  Load.hpp  LogicMap.hpp  Map.hpp  Tile.hpp  TileHandle.hpp  TileManager.hpp  TileType.hpp  World.hpp
